force-app/main/default/objects/Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Sent to Client</fullName>
            </value>
            <value>
                <fullName>Awaiting payment</fullName>
                <isActive>false</isActive>
                <label>Awaiting payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>