force-app/main/default/objects/Invoice__c/fields/Total_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_del__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>